refactor(HttpResponse): Response에 부족한 부분 추가